@@ -24,6 +24,7 @@
     # In global search, forbidden models are not proposed anymore.
     # The button menu has been reworked; it can now be reloaded dynamically
       (e.g. some buttons reloaded the whole page in order to be hidden -- or change their label -- once they did their job).
+    # Seconds are now displayed as tool-tip for datetime fields.
     # Drop JQPlot compatibility
     # Apps :
         * Creme_config :
